gl33-master/src/test/deca/context/invalid/other/appelFauxFonction4.deca
// Test de contexte invalide : appel faux de la fonction (plusieurs paramètres d'entrée)

class MyClass{

    int puissance(int a){
        return a*a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance(3,4);
}
